Compress background image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-          background-image: url("bg.png");
+          background-image: url("bg.jpg");
           margin: 0 0 0 0;
       }
       #editor {
