Stretch background for mobile users

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <style>
       body {
           background-image: url("bg.jpg");
+          background-size: auto;
           margin: 0 0 0 0;
       }
       #editor {
