--- a/index.html
+++ b/index.html
@@ -147,6 +147,23 @@
           height: 0px;
           background: transparent;
       }
+
+      .string {
+          color: #2aa889;
+      }
+      .func {
+          color: #599cab;
+      }
+      .keyword {
+          font-weight: bold;
+          color: #195466;
+      }
+      .comment {
+          color: #245361;
+      }
+      .builtin {
+          color: #d26937;
+      }
     </style>
   </head>
   <body>
@@ -203,8 +220,15 @@
             if (lineElem === null)
                 return;
 
+            line = quote(line);
+
+            line = line
+                .replace(/\{%:(\w+):/g, '<span class="$1">')
+                .replace(/%\}/g, '</span>')
+
+
             // Escape the line, code often contains nasty stuff
-            lineElem.innerHTML = quote(line);
+            lineElem.innerHTML = line;
         }
 
         function writeLines(beginLine, lines) {
@@ -233,7 +257,7 @@
           <div style="padding-right: 0.66vw;">
             % 4.5k
             <strong>
-              nyymanni.com
+              CV.py
             </strong>
           </div>
           <div> <div id="t-top"></div> <div id="t-bottom"></div> </div>
@@ -266,8 +290,11 @@
     </div>
     <script type="text/javascript">
       writeLines(2, `
-    def func(p1, p2):
-        return p1 < p2
+    {%:keyword:def%} {%:func:func%}(p1, p2):
+        {%:keyword:return%} p1 < p2
+
+    {%:comment:# Call with string%}
+    {%:func:func%}({%:string:"test"%}, 3)
 `);
       echoMinibuffer("Page loaded");
     </script>
