Update size info

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">Welcome{{{space}}}to{{{space}}}www.nyymanni.com</span>
 
-<span class="sd">Size{{{space}}}of{{{space}}}this{{{space}}}webpage{{{space}}}is{{{space}}}68{{{space}}}kB,{{{space}}}of{{{space}}}which{{{space}}}56{{{space}}}kB{{{space}}}is{{{space}}}due{{{space}}}to{{{space}}}{{{space}}}the{{{space}}}background{{{space}}}image.</span>
+<span class="sd">Size{{{space}}}of{{{space}}}this{{{space}}}webpage{{{space}}}is{{{space}}}28{{{space}}}kB,{{{space}}}including{{{space}}}the{{{space}}}background{{{space}}}image.</span>
 <span class="sd">I{{{space}}}like{{{space}}}small{{{space}}}websites.</span>
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="kn">import</span>{{{space}}}<span class="nn">threading</span>
