--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           border-left: 2px solid #091f2e;
           height: 100%;
           position: absolute;
-          left: 44em;
+          left: 52.5em;
           margin-left: -1px;
           top: 0;
       }
@@ -323,60 +323,94 @@
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">Welcome{{{space}}}to{{{space}}}www.nyymanni.com</span>
 
-<span class="sd">Size{{{space}}}of{{{space}}}this{{{space}}}webpage{{{space}}}is{{{space}}}28{{{space}}}kB,{{{space}}}including{{{space}}}the{{{space}}}background{{{space}}}image.</span>
-<span class="sd">I{{{space}}}like{{{space}}}small{{{space}}}websites.</span>
+<span class="sd">This{{{space}}}web{{{space}}}page{{{space}}}tells{{{space}}}the{{{space}}}story{{{space}}}of{{{space}}}my{{{space}}}life.</span>
+
+<span class="sd">As{{{space}}}it{{{space}}}might{{{space}}}be{{{space}}}obvious{{{space}}}from{{{space}}}the{{{space}}}style{{{space}}}of{{{space}}}this{{{space}}}website,{{{space}}}my{{{space}}}tool{{{space}}}of{{{space}}}choice{{{space}}}is{{{space}}}GNU</span>
+<span class="sd">Emacs.{{{space}}}I{{{space}}}also{{{space}}}get{{{space}}}along{{{space}}}with{{{space}}}Vim-folks,{{{space}}}since{{{space}}}I{{{space}}}prever{{{space}}}vim-style{{{space}}}keybindings{{{space}}}and</span>
+<span class="sd">use{{{space}}}evil-mode.{{{space}}}I{{{space}}}am{{{space}}}highly{{{space}}}allergic{{{space}}}to{{{space}}}IDEs{{{space}}}and{{{space}}}tools{{{space}}}that{{{space}}}hide{{{space}}}complexity{{{space}}}and</span>
+<span class="sd">remove{{{space}}}control.{{{space}}}I{{{space}}}am{{{space}}}a{{{space}}}Linux-user{{{space}}}and{{{space}}}prefer{{{space}}}working{{{space}}}with{{{space}}}a{{{space}}}tiling{{{space}}}window{{{space}}}manager</span>
+<span class="sd">(currently{{{space}}}using{{{space}}}Sway).</span>
+
+<span class="sd">I{{{space}}}like{{{space}}}to{{{space}}}work{{{space}}}on{{{space}}}low-level{{{space}}}stuff{{{space}}}with{{{space}}}C(++),{{{space}}}and{{{space}}}high-level{{{space}}}stuff{{{space}}}in{{{space}}}Python,{{{space}}}and</span>
+<span class="sd">also{{{space}}}love{{{space}}}Lisp.{{{space}}}Web{{{space}}}development{{{space}}}is{{{space}}}not{{{space}}}the{{{space}}}greatest{{{space}}}passion{{{space}}}of{{{space}}}mine,{{{space}}}allthough{{{space}}}I</span>
+<span class="sd">did{{{space}}}manage{{{space}}}to{{{space}}}pull{{{space}}}off{{{space}}}this{{{space}}}website.</span>
+
+<span class="sd">On{{{space}}}my{{{space}}}free{{{space}}}time{{{space}}}I{{{space}}}like{{{space}}}to{{{space}}}work{{{space}}}on{{{space}}}my{{{space}}}open{{{space}}}source{{{space}}}&quot;rojekti&quot;s,{{{space}}}which{{{space}}}are{{{space}}}in{{{space}}}various</span>
+<span class="sd">states{{{space}}}of{{{space}}}completeness.{{{space}}}Those{{{space}}}can{{{space}}}be{{{space}}}found{{{space}}}on{{{space}}}my{{{space}}}Github{{{space}}}page{{{space}}}at</span>
+<span class="sd">https://github.com/nyyManni.{{{space}}}I{{{space}}}also{{{space}}}like{{{space}}}to{{{space}}}play{{{space}}}with{{{space}}}networking{{{space}}}and{{{space}}}server</span>
+<span class="sd">software{{{space}}}at{{{space}}}my{{{space}}}home{{{space}}}network{{{space}}}(ask{{{space}}}my{{{space}}}wife{{{space}}}how{{{space}}}many{{{space}}}times{{{space}}}our{{{space}}}networking{{{space}}}has</span>
+<span class="sd">changed{{{space}}}for{{{space}}}&quot;no{{{space}}}obvious{{{space}}}reason&quot;).</span>
+
+<span class="sd">-Henrik</span>
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="kn">import</span>{{{space}}}<span class="nn">threading</span>
 <span class="kn">import</span>{{{space}}}<span class="nn">time</span>
-<span class="kn">from</span>{{{space}}}<span class="nn">datetime</span>{{{space}}}<span class="kn">import</span>{{{space}}}<span class="n">datetime</span>
-<span class="kn">import</span>{{{space}}}<span class="nn">random</span>
+<span class="kn">import</span>{{{space}}}<span class="nn">math</span>
+
+
+<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">1970</span>
 
 
 <span class="k">class</span>{{{space}}}<span class="nc">Self</span><span class="p">:</span>
 
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="k">def</span>{{{space}}}<span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">year</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">1992</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">1992</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">name</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;Henrik{{{space}}}Nyman&#39;</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">hometown</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;Hinnerjoki,{{{space}}}Eura&#39;</span>
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">email</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;henrikjohannesnyman@gmail.com&#39;</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">email</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;h@nyymanni.com&#39;</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">title</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="bp">None</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">career</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="n">threading</span><span class="o">.</span><span class="n">Thread</span><span class="p">(</span><span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">work_experience</span><span class="p">)</span>
 
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="k">def</span>{{{space}}}<span class="nf">education</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">year</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2011</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2011</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="k">yield</span>{{{space}}}<span class="n">Matriculation</span><span class="p">(</span><span class="n">location</span><span class="o">=</span><span class="s1">&#39;Euran{{{space}}}Lukio&#39;</span><span class="p">)</span>
 
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="c1">#{{{space}}}Military{{{space}}}service</span>
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">year</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2012</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2012</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">time</span><span class="o">.</span><span class="n">sleep</span><span class="p">(</span><span class="mi">180</span>{{{space}}}<span class="o">*</span>{{{space}}}<span class="mi">24</span>{{{space}}}<span class="o">*</span>{{{space}}}<span class="mi">3600</span><span class="p">)</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">hometown</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;Tampere&#39;</span>
 
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">year</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2015</span>
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">threading</span><span class="o">.</span><span class="n">Thread</span><span class="p">(</span><span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">work_experience</span><span class="p">)</span><span class="o">.</span><span class="n">start</span><span class="p">()</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2015</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">career</span><span class="o">.</span><span class="n">start</span><span class="p">()</span>
 
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">year</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2016</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2016</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="k">yield</span>{{{space}}}<span class="n">Candidate</span><span class="p">(</span><span class="n">major</span><span class="o">=</span><span class="s1">&#39;Information{{{space}}}Technology&#39;</span><span class="p">,</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">location</span><span class="o">=</span><span class="s1">&#39;Tampere{{{space}}}University{{{space}}}of{{{space}}}Technology&#39;</span><span class="p">)</span>
 
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">year</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2018</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2018</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="k">yield</span>{{{space}}}<span class="n">MasterOfScience</span><span class="p">(</span><span class="n">major</span><span class="o">=</span><span class="s1">&#39;Pervasive{{{space}}}Systems&#39;</span><span class="p">,</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">location</span><span class="o">=</span><span class="s1">&#39;Tampere{{{space}}}University{{{space}}}of{{{space}}}Technology&#39;</span><span class="p">)</span>
 
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="k">def</span>{{{space}}}<span class="nf">work_experience</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">company</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;OptoFidelity{{{space}}}Ltd.&#39;</span>
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">title</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;Software{{{space}}}Trainee&#39;</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">title</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;Software{{{space}}}Trainee&#39;</span>
 
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">year</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2015</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2015</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">countries_visited</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="s1">&#39;China&#39;</span><span class="p">)</span>
 
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">title</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;Software{{{space}}}Engineer&#39;</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">title</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;Software{{{space}}}Engineer&#39;</span>
 
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">year</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2016</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2016</span>
 {{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">countries_visited</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="s1">&#39;U.S.&#39;</span><span class="p">)</span>
 
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">year</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="n">datetime</span><span class="o">.</span><span class="n">now</span><span class="p">()</span><span class="o">.</span><span class="n">year</span>
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="k">while</span>{{{space}}}<span class="bp">True</span><span class="p">:</span>
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">work</span><span class="p">(</span><span class="n">company</span><span class="p">)</span>
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">masters_thesis</span><span class="p">(</span><span class="n">company</span><span class="p">)</span>
-{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">time</span><span class="o">.</span><span class="n">sleep</span><span class="p">(</span><span class="n">random</span><span class="o">.</span><span class="n">randint</span><span class="p">(</span><span class="mi">5</span>{{{space}}}<span class="o">*</span>{{{space}}}<span class="mi">3600</span><span class="p">,</span>{{{space}}}<span class="mi">8</span>{{{space}}}<span class="o">*</span>{{{space}}}<span class="mi">3600</span><span class="p">))</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2018</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">thesis_work</span><span class="p">(</span><span class="n">company</span><span class="p">)</span>
+
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2019</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">title</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="s1">&#39;Scrum{{{space}}}Master,{{{space}}}Software{{{space}}}Lead&#39;</span>
+
+
+<span class="k">if</span>{{{space}}}<span class="vm">__name__</span>{{{space}}}<span class="o">==</span>{{{space}}}<span class="s1">&#39;__main__&#39;</span><span class="p">:</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">me</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="n">Self</span><span class="p">()</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">1999</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="k">for</span>{{{space}}}<span class="n">_</span>{{{space}}}<span class="ow">in</span>{{{space}}}<span class="n">me</span><span class="o">.</span><span class="n">education</span><span class="p">():</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">me</span><span class="o">.</span><span class="n">party</span><span class="p">(</span><span class="n">hard</span><span class="o">=</span><span class="bp">True</span><span class="p">)</span>
+
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="mi">2019</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="bp">self</span><span class="o">.</span><span class="n">childen</span>{{{space}}}<span class="o">+=</span>{{{space}}}<span class="mi">1</span>
+
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">YEAR</span>{{{space}}}<span class="o">=</span>{{{space}}}<span class="n">math</span><span class="o">.</span><span class="n">nan</span>{{{space}}}{{{space}}}<span class="c1">#{{{space}}}This{{{space}}}generation{{{space}}}won&#39;t{{{space}}}get{{{space}}}to{{{space}}}retire...</span>
+{{{space}}}{{{space}}}{{{space}}}{{{space}}}<span class="n">me</span><span class="o">.</span><span class="n">career</span><span class="o">.</span><span class="n">join</span><span class="p">()</span>
 <!-- Content end -->
 `);
       echoMinibuffer("Page loaded");
