--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 <span class="sd">This{{{space}}}web{{{space}}}page{{{space}}}tells{{{space}}}the{{{space}}}story{{{space}}}of{{{space}}}my{{{space}}}life.</span>
 
 <span class="sd">As{{{space}}}it{{{space}}}might{{{space}}}be{{{space}}}obvious{{{space}}}from{{{space}}}the{{{space}}}style{{{space}}}of{{{space}}}this{{{space}}}website,{{{space}}}my{{{space}}}tool{{{space}}}of{{{space}}}choice{{{space}}}is{{{space}}}GNU</span>
-<span class="sd">Emacs.{{{space}}}I{{{space}}}also{{{space}}}get{{{space}}}along{{{space}}}with{{{space}}}Vim-folks,{{{space}}}since{{{space}}}I{{{space}}}prever{{{space}}}vim-style{{{space}}}keybindings{{{space}}}and</span>
+<span class="sd">Emacs.{{{space}}}I{{{space}}}also{{{space}}}get{{{space}}}along{{{space}}}with{{{space}}}Vim-folks,{{{space}}}since{{{space}}}I{{{space}}}prefer{{{space}}}vim-style{{{space}}}keybindings{{{space}}}and</span>
 <span class="sd">use{{{space}}}evil-mode.{{{space}}}I{{{space}}}am{{{space}}}highly{{{space}}}allergic{{{space}}}to{{{space}}}IDEs{{{space}}}and{{{space}}}tools{{{space}}}that{{{space}}}hide{{{space}}}complexity{{{space}}}and</span>
 <span class="sd">remove{{{space}}}control.{{{space}}}I{{{space}}}am{{{space}}}a{{{space}}}Linux-user{{{space}}}and{{{space}}}prefer{{{space}}}working{{{space}}}with{{{space}}}a{{{space}}}tiling{{{space}}}window{{{space}}}manager</span>
 <span class="sd">(currently{{{space}}}using{{{space}}}Sway).</span>
